BuildHughes/translation-tool/inputs/source_meta/objects/SA_OperationtoFieldSetMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to fetch field set name to display results / Frame a query</description>
    <fields>
        <fullName>Country__c</fullName>
        <inlineHelpText>Enter Country/Instance Name</inlineHelpText>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fieldset_Name__c</fullName>
        <inlineHelpText>Enter Field set name</inlineHelpText>
        <label>Fieldset Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_BusinessModel__c</fullName>
        <label>Business model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <inlineHelpText>Enter sObject</inlineHelpText>
        <label>Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <inlineHelpText>Enter the operation name</inlineHelpText>
        <label>Operation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>SA_OperationtoFieldSetMapping</label>
</CustomObject>